Fix SonarQube issues in product-service and user-service: constructor injection and Java 16+ streams